--- a/supermarkets.html
+++ b/supermarkets.html
@@ -44,6 +44,9 @@
         </div>
 
         <br>
+        <center>
+          <p>Click on a supermarket below to zoom in on the map.</p>
+        </center>
 
         <h3>Manhattan</h3>
         <div class="row">
