--- a/recipes.html
+++ b/recipes.html
@@ -79,7 +79,7 @@
           </div>
           <div class="6u 12u$(medium)">
             Directions:
-            <ul>
+            <ol>
               <li>In a medium-sized bowl, mash a ripened banana until mostly smooth.</li>
               <li>Add honey and vanilla, stir.</li>
               <li>Add salt, and oats. Mix well.</li>
@@ -87,7 +87,7 @@
               <li>Refrigerate 0.5 hour and preheat oven to 350oF (180oC).</li>
               <li>Bake granola cups for 30 minutes</li>
               <li>Allow to cool for 5 minutes and add a tablespoon of yogurt to each cup along with any preferred toppings.</li>
-            </ul>
+            </ol>
           </div>
         </div>
         <hr>
@@ -226,9 +226,9 @@
           <div class="6u 12u$(medium)">
             Directions:
             <ol>
-              <li>1. Cook the onions in the oil over medium-low heat for 10 to 15 minutes, until translucent. Add the garlic and cook for 1 more minute.  Add the bell peppers, chili powder, cumin, red pepper flakes, cayenne, and salt. Cook for 1 minute. Crush the tomatoes by hand or in batches in a food processor fitted with a steel blade (pulse 6 to 8 times). Add to the pot with the basil. Bring to a boil, then reduce the heat and simmer, uncovered, for 30 minutes, stirring occasionally.</li>
-<li>2. Preheat the oven to 350 degrees F.</li>
-<li>3. Rub the chicken breasts with olive oil and place them on a baking sheet. Sprinkle generously with salt and pepper. Roast the chicken for 35 to 40 minutes, until just cooked. Let cool slightly. Separate the meat from the bones and skin and cut it into 3/4-inch chunks. Add to the chili and simmer, uncovered, for another 20 minutes. Serve with the toppings, or refrigerate and reheat gently before serving.</li>
+              <li>Cook the onions in the oil over medium-low heat for 10 to 15 minutes, until translucent. Add the garlic and cook for 1 more minute.  Add the bell peppers, chili powder, cumin, red pepper flakes, cayenne, and salt. Cook for 1 minute. Crush the tomatoes by hand or in batches in a food processor fitted with a steel blade (pulse 6 to 8 times). Add to the pot with the basil. Bring to a boil, then reduce the heat and simmer, uncovered, for 30 minutes, stirring occasionally.</li>
+<li>Preheat the oven to 350 degrees F.</li>
+<li>Rub the chicken breasts with olive oil and place them on a baking sheet. Sprinkle generously with salt and pepper. Roast the chicken for 35 to 40 minutes, until just cooked. Let cool slightly. Separate the meat from the bones and skin and cut it into 3/4-inch chunks. Add to the chili and simmer, uncovered, for another 20 minutes. Serve with the toppings, or refrigerate and reheat gently before serving.</li>
             </ol>
           </div>
         </div>
@@ -266,9 +266,9 @@
           <div class="6u 12u$(medium)">
             Directions:
             <ol>
-              <li>1. Heat the oil in large pot or Dutch oven over moderate heat.  Add the onion, celery, poblanos, and cook, stirring occasionally, until the vegetables are soft, about 8 minutes.  Add the garlic, cumin, coriander and cayenne and cook, stirring, until fragrant, about 30 seconds.</li>
-<li>2. Add the ground turkey and cook, breaking up the meat with a spoon, until the meat is no longer pink about 2 minutes. Add the white beans, broth and oregano. Cook, partially covered, stirring occasionally, for 25 minutes.</li>
-<li>3. Add the hominy and salt and more cayenne pepper, to taste, and continue cooking, partially covered, 10 minutes longer.  Ladle into individual bowls and top each serving with 1 tablespoon of yogurt and 1 1/2 teaspoons of cilantro. Garnish</li>
+              <li>Heat the oil in large pot or Dutch oven over moderate heat.  Add the onion, celery, poblanos, and cook, stirring occasionally, until the vegetables are soft, about 8 minutes.  Add the garlic, cumin, coriander and cayenne and cook, stirring, until fragrant, about 30 seconds.</li>
+<li>Add the ground turkey and cook, breaking up the meat with a spoon, until the meat is no longer pink about 2 minutes. Add the white beans, broth and oregano. Cook, partially covered, stirring occasionally, for 25 minutes.</li>
+<li>Add the hominy and salt and more cayenne pepper, to taste, and continue cooking, partially covered, 10 minutes longer.  Ladle into individual bowls and top each serving with 1 tablespoon of yogurt and 1 1/2 teaspoons of cilantro. Garnish</li>
             </ol>
           </div>
         </div>
