--- a/rooftop-gardens.html
+++ b/rooftop-gardens.html
@@ -50,55 +50,20 @@
 				</div>
 
 				<div class="row">
-					<h2>Why start a rooftop garden?</h2>
-					<ul>
-						<li>
-							Rooftop gardens are great
-							features to transform
-							urban homes into peaceful
-							and eco-friendly
-							environments.
-						</li>
-						<li>
-							If you live in an apartment
-							or a house without a
-							backyard, rooftop gardens
-							would give you the
-							opportunity to tend a
-							variety of plants ranging
-							from trees and grasses, to
-							fruits and vegetables.
-						</li>
-						<li>
-							Make sure that your roof is
-							legible for cultivating
-							plants on. i.e, sun
-							exposure, water drainage
-						</li>
-						<li>
-							Get creative! Choose the
-							right seeds or bulbs to
-							utilize your space
-							efficiently.
-						</li>
-					</ul>
+					<h2>What is a rooftop garden?</h2>
+          <p>Rooftop gardens are man-made green spaces on the topmost levels of industrial, commercial, and residential structures. They may be designed to grow produce, provide play space, give shade and shelter, or simply be there as a living, green area. There are two main types of gardens: extensive and intensive. Extensive gardens require minimal maintenance and behave as another from of roofing material. Intensive gardens are created with the intent of active human use.</p>
 				</div>
 
 				<div class="row">
-					<h2>How can you get one started?</h2>
-					<ul>
-						<li>Make sure that your
-							roof/balcony is legible for
-							cultivating plants on. i.e, sun
-							exposure, water drainage</li>
-						<li>Conduct some research when
-							buying fertilizer,soil, pots, and
-							seeds for gardening</li>
-						<li>Get creative! Gather your
-							choice of seeds or bulbs to
-							utilize your space efficiently.</li>
-						<li>Grab some gloves and start planting!</li>
-					</ul>
+					<h2>Why is it important?</h2>
+          <p>Rooftop gardens are great features to transform urban homes into peaceful and eco-friendly environments . If you live in an apartment or a house without a backyard, rooftop gardens give you the opportunity to tend to a variety of plant and grow your own fresh produce. Rooftop gardens also help mitigate the downsides of urban life, such as curbing noise pollution, providing insulation in the winter and keeping temperatures cool in the summer.
+</p>
+				</div>
+
+				<div class="row">
+					<h2>Making your own rooftop garden</h2>
+          <p>First, make sure you find out about local laws and regulations regarding rooftop gardens, before spending time and money into them. Then, get an architect or contractor involved to make sure that your building is safe enough to build a garden on and can support the extra weight.
+</p>
 				</div>
 
 				<div class="row">
